--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,13 @@
     <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <style>
+      :root {
+        --fa-animation-delay: 0s;
+        --fa-rotate-angle: 0deg;
+      }
+    </style>
+
     <!-- Font Awesome for social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
